# dbt-orchestra-metadata

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  README.md  dbt_project.yml  package-lock.yml  profiles.yml  profiles.yml.example  pyproject.toml
.github/scripts/: sql_to_dbt_converter.py
.github/workflows/: ci.yml  lightdash-sync.yml  sql-to-dbt.yml
lightdash/charts/: ops-breakdown-failures-by-integration.yml  ops-breakdown-failures-by-pipeline.yml  ops-kpi-pipeline-runs.yml  ops-kpi-task-failure-rate.yml  ops-trend-daily-runs.yml  ops-trend-failure-rate.yml
lightdash/dashboards/: orchestra-operations-health.yml
macros/: get_run_status_color.sql  json_array_length.sql  macros.yml  most_common_value.sql  source_column_or_null.sql  timestamp_diff_seconds.sql
models/: schema.yml  sources.yml
models/marts/dimensions/: _dimensions__models.yml  dim_assets.sql  dim_integrations.sql  dim_pipelines.sql  schema.yml
models/marts/facts/: _facts__models.yml  fct_operations.sql  fct_pipeline_runs.sql  fct_task_runs.sql  schema.yml
models/marts/metrics/: _metrics__models.yml  metrics_daily_summary.sql  schema.yml
models/pipeline-service/database/: asset_metrics_coverage.sql  asset_run_analytics.sql  asset_runs_time_series.sql  assets_management_summary.sql  bucketed_asset_metrics.sql  bucketed_assets_coverage.sql  bucketed_operation_counts.sql  grouped_operations.sql  grouped_task_run_or_operation_summary.sql  last_dbt_core_task_run.sql  last_successful_production_task_run.sql  lightweight_operations.sql  lightweight_operations_for_analytics.sql  operation_bucket_counts.sql  operation_metrics_summary.sql  operations_assets_filter.sql  operations_filtered_by_asset.sql  operations_with_assets.sql  paged_operations_or_tasks.sql  pipeline_run_analytics.sql  pipeline_runs_by_time_bucket.sql  schema.yml  task_run_analytics.sql  task_run_operations.sql  task_run_or_operation.sql  task_run_statistics.sql  task_run_summary.sql  task_run_usage_buckets.sql  task_run_usage_by_time_bucket.sql  task_runs_time_series.sql  (+7 more)
models/staging/: _staging__models.yml  schema.yml  stg_orchestra__assets.sql  stg_orchestra__operations.sql  stg_orchestra__operations.yml  stg_orchestra__pipeline_runs.sql  stg_orchestra__task_runs.sql
tests/generic/: test_timestamp_order.sql  test_valid_duration.sql
(+2 files in other folders)
